<resources>
    <string name="app_name">Leiturama</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login_img">library</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="or">OR</string>

    <string name="error_connection">Connectio has been failed</string>
    <string name="error_request">Bad request</string>

    <string name="lable_title">Title</string>
    <string name="lable_authors">Authors</string>
    <string name="lable_publisher">Publisher</string>
    <string name="lable_publishedDate">Published Date</string>
    <string name="lable_description">Description</string>
    <string name="lable_pageCount">Number of Pages</string>
    <string name="lable_categories">Categories</string>
    <string name="save_btn">Save</string>

    <string name="cancel_btn">Cancel</string>
    <string name="error_permission_not_granted">Permission not granted</string>
    <string name="permission_request_canceled">Permission request canceled</string>
    <string name="title_error">Erro</string>
    <string name="label_ok">Ok</string>
</resources>
